# erlsom

./: .gitignore  .project  CHANGELOG.md  Makefile  README.md  configure  configure.in  include.mk.in  make-release  make-upload  rebar  rebar.config  vsn.mk
doc/: erlsom.htm  reference.md
ebin/: .gitignore
examples/book_store/: BookStore.xsd  book_store.erl
examples/complex_form/: complex_form_example.erl  erlsom_complex_form.erl
examples/continuation/: continuation_example.erl  itunes_example.xml  itunes_example_be.xml
examples/erlsom_example/: erlsom.hrl  erlsom_example.beam  erlsom_example.erl  example_in.xsd
examples/erlsom_sax_example/: erlsom_simple_form.erl  sax_example.xml  search_request.xsd
examples/example1/: example1.erl  example1.xsd
examples/soap_example/: example_in.xml  example_out.xsd  soap-envelope.xsd  soap_example.erl
include/: erlsom.hrl  erlsom_compile.hrl  erlsom_parse.hrl  erlsom_sax.hrl
priv/all/: all.xml  all.xsd
priv/choice_complex/: choice_complex.xml  choice_complex.xsd
priv/extension/: Makefile  extension.xml  extension.xsd  (+2 more)
src/: Makefile  erlsom.app.src  erlsom.erl  erlsom.hrl  erlsom_add.erl  erlsom_compile.erl  erlsom_compile.hrl  erlsom_example_value.erl  erlsom_lib.erl  erlsom_parse.erl  erlsom_parse.hrl  erlsom_parseXsd.erl  erlsom_pass2.erl  erlsom_sax.erl  erlsom_sax.hrl  erlsom_sax_latin1.erl  erlsom_sax_latin9.erl  erlsom_sax_lib.erl  erlsom_sax_list.erl  erlsom_sax_utf16be.erl  erlsom_sax_utf16le.erl  erlsom_sax_utf8.erl  erlsom_simple_form.erl  erlsom_type2xsd.erl  erlsom_ucs.erl  erlsom_write.erl  erlsom_writeHrl.erl  ucs.erl
test/: erlsom_all_tests.erl  erlsom_extension_tests.erl  erlsom_gexf_tests.erl  erlsom_tests.erl
(+8 files in other folders)
